--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 
 :root {
   font-family: 'Roboto', system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 23, 07px;
+  line-height: 23.07px;
   font-weight: 300;
   font-size: 16px;
 
@@ -119,7 +119,8 @@ nav a:hover {
   align-items: center;
   width: calc(33.33% - 20px);
   border-radius: 4px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.1);
+  background-color: transparent;
 }
 
 .product-card__image {
@@ -159,9 +160,11 @@ footer {
 .nav-wrapper {
   display: flex;
   align-items: center;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  border-bottom: 2px solid #ccc;
+  align-self: center;
+  border-bottom: 1px solid #000000;
   padding-bottom: 10px;
+  width: calc(100% - (45px * 2));
+  margin-left: 45px;
 }
 
 nav.navbar__links {
@@ -170,11 +173,12 @@ nav.navbar__links {
   padding-right: 69px;
 }
 
-.nav-wrapper > *:first-child {
-  padding-left: 45px;
+.navbar__link__title {
+  font-weight: 600;
+  margin-left: 0;
 }
 
-.navbar__link__title {
+.navbar__link__title__variant {
   font-weight: 600;
 }
 
@@ -190,4 +194,193 @@ nav.navbar__links {
 
 #menu-button {
   font-size: 16px;
+}
+
+.product-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
+  background-color: transparent;
+}
+
+.product-image-prewrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.product-image-wrapper {
+  width: 386px;
+  height: 386px;
+  background-color: #fff;
+  border-radius: 4px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 104px;
+  box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.1);
+}
+
+.product-image {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
+  border-radius: 4px;
+}
+
+.product-info {
+  width: calc(50% - (104px / 2));
+  max-width: 351px;
+}
+
+.product-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.product-name {
+  font-size: 24px;
+  margin-bottom: 1rem;
+}
+
+.product-description {
+  font-size: 16px;
+  margin-bottom: 1.5rem;
+}
+
+.product-description-tag {
+  font-size: 16px;
+  margin-bottom: 0.5rem;
+  font-weight: 600;
+}
+
+.product-price {
+  font-size: 24px;
+  font-weight: 200;
+  margin-bottom: 2rem;
+}
+
+.add-to-cart {
+  background-color: #000000;
+  font-size: 1rem;
+  padding: 15px;
+  border-radius: 4px;
+  cursor: pointer;
+  border: none;
+  transition: all 0.2s ease-in-out;
+
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 144.19%;
+  color: #ffffff;
+}
+
+.add-to-cart:hover {
+  background-color: #333333;
+}
+
+.breadcrumb-container {
+  padding: 10px;
+  border-radius: 5px;
+  padding-left: 53px;
+}
+
+.breadcrumb-list {
+  list-style: none;
+  display: flex;
+  margin: 0;
+  padding: 0;
+}
+
+.breadcrumb-item {
+  font-size: 14px;
+  line-height: 20.19px;
+  color: #000000;
+}
+
+.breadcrumb-item:last-child {
+  margin-right: 0;
+}
+
+.breadcrumb-item a {
+  color: #000000;
+  text-decoration: none;
+}
+
+.breadcrumb-item.active {
+  color: #000000;
+}
+
+.breadcrumb-item a::after {
+  content: '\00B7';
+  display: inline-block;
+  margin: 0 5px;
+  color: #000000;
+}
+
+.breadcrumb-item:last-child a::after {
+  content: none;
+}
+
+.stepper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  max-width: 386px;
+  margin: 40px 0;
+  font-family: Roboto;
+  background-color: transparent;
+}
+
+.stepper-btn {
+  color: rgba(0, 0, 0, 0.54);
+  font-size: 14px;
+  font-weight: bold;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  outline: none;
+  transition: color 0.2s ease-in-out;
+  font-family: 'Roboto';
+  font-weight: 300;
+}
+
+.stepper-btn:hover {
+  color: black;
+}
+
+.stepper-btn:active {
+  background-color: transparent;
+}
+
+.stepper-dots {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+}
+
+.dot {
+  width: 12px;
+  height: 12px;
+  margin: 0 8px;
+  border-radius: 50%;
+  background-color: rgba(0, 0, 0, 0.54);
+  transition: background-color 0.2s ease-in-out;
+}
+
+.dot.active {
+  background-color: black;
+}
+
+#back-btn:disabled {
+  color: black;
+}
+
+#next-btn:disabled {
+  color: rgba(0, 0, 0, 0.54);
 }
