--- a/src/index.css
+++ b/src/index.css
@@ -101,33 +101,109 @@ nav a:hover {
 .navbar__link a:hover {
   color: #646cff;
 }
+.product-grid-container {
+  padding: 40px 0;
+  background-color: transparent;
+  margin-bottom: 80px;
+}
 
 .product-grid {
   display: flex;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: center;
   gap: 20px;
-  padding: 40px 60px;
-  background-color: transparent;
-  flex-grow: 1;
-  margin-bottom: 80px;
+  width: 100%;
+  margin: auto;
+  height: 100%;
+}
+
+.product-grid > *:nth-last-child(2) {
+  margin-bottom: 0;
+  justify-content: center;
+}
+
+@media (min-width: 922px) {
+  .product-grid::after {
+    content: '';
+    flex: auto;
+  }
+
+  .product-grid__odd > *:nth-last-child(2) {
+    margin-bottom: 0;
+    justify-content: flex-start;
+    margin-left: calc(((100% - ((294px * 3) + 40px)) / 2));
+  }
+
+  .product-grid__even > *:nth-last-child(1),
+  .product-grid__20 > *:nth-last-child(2) {
+    margin-bottom: 0;
+    justify-content: flex-start;
+    margin-left: calc(((100% - ((294px * 3) + 40px)) / 2));
+  }
+
+  .product-grid__three::after {
+    flex: none !important;
+  }
+
+  .product-grid__three > *:nth-last-child(1),
+  .product-grid__three > *:nth-last-child(2),
+  .product-grid__three > *:nth-last-child(3) {
+    margin-bottom: 0;
+    justify-content: center;
+    margin-left: 0;
+    margin: 0;
+  }
+}
+
+@media (min-width: 608px) and (max-width: 921px) {
+  .product-grid__odd::after {
+    content: '';
+    flex: auto;
+  }
+
+  .product-grid__odd > *:nth-last-child(1) {
+    margin-bottom: 0;
+    justify-content: flex-start;
+    margin-left: calc(((100% - ((294px * 2) + 20px)) / 2));
+  }
+}
+
+.product-grid > * {
+  height: 100%;
+}
+
+.product-card-wrapper {
+  display: flex;
+  flex-direction: column;
 }
 
 .product-card {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: calc(33.33% - 20px);
+  justify-content: center;
+  width: 294px;
+  height: 294px;
   border-radius: 4px;
   box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.1);
   background-color: transparent;
 }
 
-.product-card__image {
+.product-card__image-container {
   width: 100%;
-  height: 200px;
-  object-fit: cover;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.product-card__image {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
   border-radius: 4px;
+  width: 294px;
+  height: 294px;
 }
 
 .product-card__name {
@@ -136,6 +212,8 @@ nav a:hover {
   font-weight: 200;
   color: #333333;
   text-align: center;
+  max-width: calc(294px - (16px * 2));
+  word-wrap: normal;
 }
 
 footer {
@@ -180,6 +258,14 @@ nav.navbar__links {
 
 .navbar__link__title__variant {
   font-weight: 600;
+}
+
+.navbar__link__p {
+  cursor: pointer;
+}
+
+.navbar__link__p__variant {
+  cursor: default;
 }
 
 .navbar__link__mid {
