--- a/src/index.css
+++ b/src/index.css
@@ -369,8 +369,8 @@ nav.navbar__links {
 }
 
 .breadcrumb-container {
+  max-width: 100vw;
   padding: 10px;
-  border-radius: 5px;
   padding-left: 53px;
 }
 
@@ -379,6 +379,10 @@ nav.navbar__links {
   display: flex;
   margin: 0;
   padding: 0;
+}
+
+.breadcrumb-list {
+  flex-wrap: wrap;
 }
 
 .breadcrumb-item {
@@ -391,7 +395,7 @@ nav.navbar__links {
   margin-right: 0;
 }
 
-.breadcrumb-item a {
+.breadcrumb-item p {
   color: #000000;
   text-decoration: none;
 }
@@ -400,20 +404,20 @@ nav.navbar__links {
   color: #000000;
 }
 
-.breadcrumb-item a::after {
+.breadcrumb-item p::after {
   content: '\00B7';
   display: inline-block;
   margin: 0 5px;
   color: #000000;
 }
 
-.breadcrumb-item:last-child a::after {
+.breadcrumb-item:last-child p::after {
   content: none;
 }
 
 .stepper {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   width: 100%;
   max-width: 386px;
@@ -447,7 +451,8 @@ nav.navbar__links {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 50%;
+  width: 50px;
+  height: 50px;
 }
 
 .dot {
@@ -457,6 +462,7 @@ nav.navbar__links {
   border-radius: 50%;
   background-color: rgba(0, 0, 0, 0.54);
   transition: background-color 0.2s ease-in-out;
+  flex-shrink: 0;
 }
 
 .dot.active {
@@ -469,4 +475,130 @@ nav.navbar__links {
 
 #next-btn:disabled {
   color: rgba(0, 0, 0, 0.54);
+}
+
+@media (max-width: 767px) {
+  /* CSS styles for mobile devices */
+  .nav-wrapper {
+    border-bottom: 1px solid transparent;
+    border-top: 1px solid #000000;
+  }
+  .nav-wrapper__mob__inner {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+  }
+
+  .nav-wrapper.nav-wrapper__mob {
+    display: flex;
+    flex-direction: column;
+    width: calc(100% - (45px * 2));
+    height: auto;
+  }
+
+  .product-container {
+    flex-direction: column;
+    align-items: center;
+    padding: 2rem 1rem;
+  }
+
+  .product-image-prewrapper {
+    margin-bottom: 1rem;
+  }
+
+  .product-image-wrapper {
+    width: 269px;
+    height: 269px;
+    margin-right: 0;
+  }
+
+  .product-info {
+    width: 100%;
+    max-width: 266px;
+    text-align: center;
+    align-items: center;
+  }
+
+  .add-to-cart {
+    border-radius: 50px;
+    font-size: 20px;
+  }
+
+  .breadcrumb-container {
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-bottom: 1rem;
+  }
+}
+
+.logo {
+  transition: all 0.3s ease-in-out;
+}
+
+.dropdown-wrapper {
+  width: 100%;
+  white-space: nowrap;
+}
+
+.dropdown-menu {
+  display: flex;
+  align-items: flex-start;
+  flex-wrap: nowrap;
+  padding: 16px;
+  margin: 0;
+  flex-direction: column;
+  border-left: 1px solid black;
+  width: 100%;
+}
+
+.dropdown-item {
+  margin-right: 24px;
+  width: 100%;
+  overflow: hidden;
+}
+
+.dropdown-item-title {
+  margin: 0 0 8px 0;
+  font-size: 14px;
+  font-weight: 600;
+  color: #000;
+  text-transform: uppercase;
+}
+
+.dropdown__links {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+  overflow: -moz-scrollbars-none;
+  -webkit-overflow-scrolling: touch;
+  font-size: 12px;
+  width: 100%;
+  overflow-x: scroll;
+}
+
+.dropdown__link {
+  margin: 0 0 8px 0;
+  font-size: 16px;
+}
+
+.dropdown__link__p {
+  margin: 0;
+  cursor: pointer;
+  margin-right: 16px;
+}
+
+.dropdown__link__p:hover {
+  text-decoration: underline;
+}
+
+.dropdown__link__p:focus {
+  outline: none;
+}
+
+::-webkit-scrollbar {
+  width: 0;
+  height: 0;
 }
